# src/routes/user/userRoutes.ts
@@ -1,17 +1,8 @@
 import express from "express";
-import userController from "../../controllers/userController";
-import { postCheck } from "../../validation/userRoutesValidation";
+import * as userController from "../../controllers/userController";
 
 const router = express.Router();
 
-router.get("/all", userController.getAllUser);
-
-router.get("/:id", userController.getUser);
-
-router.post("/", postCheck, userController.createUser);
-
-router.put("/:id", userController.updateUser);
-
-router.delete("/:id", userController.deleteUser);
+router.get("/", userController.getAllUser);
 
 export { router };
