# src/validation/userRoutesValidation.ts
@@ -1,9 +1,0 @@
-import { body } from "express-validator";
-import { requestValidator } from "../middleware/validation";
-
-export const postCheck = [
-  body("name").notEmpty(),
-  body("email").isEmail(),
-  body("password").exists(),
-  requestValidator
-];
